# dns-forward-over-tcp

./: Cargo.toml  README.md
.github/workflows/: main.yml
src/: lib.rs  main.rs  server.rs
